# ProjectTemplate

./: CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp  run.sh
include/: Tools.h
src/: Tools.cpp
